--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.3.0",
+    "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.3",
     "zod": "^3.23.8"
   }
