--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.9",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.24.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -17,7 +19,11 @@
     "@hono/zod-validator": "^0.3.0",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.6.3",
+    "pg": "^8.13.0",
+    "postgres": "^3.4.4",
     "zod": "^3.23.8"
   }
 }
